--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <title>Connect 4</title>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+
+  <body> 
+    <br>
+    <div id ="title">
+      <h1>C<span style="color: yellow">onne</span>ct <span style="color: red">4</span></h1>
+    </div>
+    <br>
+    <div class="turn" id="turn"></div>
+    <br>
+    <div>
+      <h4 id="output_message"></h4>
+    </div>
+    <br>
+    <div id="gameBoard">
+    </div>
+    <br>
+    <script src="script.js"></script>
+  </body>
+</html>
